--- a/styles/WU.css
+++ b/styles/WU.css
@@ -9,6 +9,8 @@ body {
 h1 {
     color: rgb(255, 230, 45);
     text-align: center;
+    margin-top: -7px;
+    margin-bottom: 5px;
 }
 
 
@@ -20,7 +22,6 @@ h1 {
 
 .group {
     flex: 1 1 calc(33% - 45px);
-    margin-bottom: 10px;
     padding: 5px;
     border-radius: 5px;
     padding-left: 15px;
@@ -59,9 +60,13 @@ h1 {
     transition: background-color 2s ease-in-out;
 }
 
+#current-condition  {
+    margin-right: 75px;
+}
+
 .update-info {
-    margin-top: 20px;
-    padding: 10px;
+    margin-top: 5px;
+    padding: 5px;
     border: 2px solid #0b0b0b;
     border-radius: 5px;
     background-color: #cd95f7;
