--- a/styles/WU.css
+++ b/styles/WU.css
@@ -57,6 +57,7 @@ h1 {
     color: #000000; 
     text-align: center;
     font-size: 2rem;
+    background-color: gray;
     transition: background-color 2s ease-in-out;
 }
 
