--- a/styles/ambient.css
+++ b/styles/ambient.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 10px;
     background-color: rgb(79, 14, 14);
-    font-size: 1.35rem;
+    font-size: 1.25rem;
 }
 
 h1 {
@@ -71,10 +71,15 @@ h1 {
 
 .update-info {
     margin-top: 10px;
-    padding: 5px;
+    padding: 15px;
     border: 2px solid #0b0b0b;
     border-radius: 5px;
     background-color: #cd95f7;
+}
+
+.update-info p {
+    margin: 0;
+    margin: 10px 0;
 }
 
 .center {
