--- a/styles/ambient.css
+++ b/styles/ambient.css
@@ -25,7 +25,7 @@ h1 {
     padding: 5px;
     border-radius: 5px;
     padding-left: 15px;
-    border: 2px solid #0b0b0b;
+    border: 5px solid rgb(201, 124, 2);
 }
 
 .group-title {
@@ -72,7 +72,7 @@ h1 {
 .update-info {
     margin-top: 10px;
     padding: 15px;
-    border: 2px solid #0b0b0b;
+    border: 5px solid rgb(201, 124, 2);
     border-radius: 5px;
     background-color: #cd95f7;
 }
