--- a/styles/ambient.css
+++ b/styles/ambient.css
@@ -114,7 +114,7 @@ h1 {
     color: black;
 }
 
-.group.current-condition.comfortable {
+.group.current-condition.mild {
     background-color: lightyellow;
     color: black;
 }
@@ -151,8 +151,12 @@ h1 {
         font-size: 1rem;
     }
 
+    .container {
+        padding: .125rem;
+    }
+
     .container p {
-        font-size: .85rem;
+        font-size: .95rem;
         margin: 0;
         margin-top: 15px;
     }
@@ -172,11 +176,12 @@ h1 {
     .update-info p {
         margin: 0;
         margin: 10px 0;
-        font-size: .85rem;
+        font-size: .9rem;
     }
 
     #current-condition  {
-        margin: 20px 25px 25px 0;
+        margin: 0;
+        margin: 20px 0 20px;
     }
 
     .update-info {
@@ -186,6 +191,13 @@ h1 {
         border-radius: 5px;
         background-color: #cd95f7;
     }
+
+    .container .current-condition p {
+        font-size: 1.2rem !important;
+    }
+    
+    
+    
 
 }
 
