--- a/styles/ambient.css
+++ b/styles/ambient.css
@@ -18,13 +18,13 @@ h1 {
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 12px;
-    font-size: 1.2rem;
+    gap: 7px;
+    font-size: 1.3rem;
 }
 
 .group {
     flex: 1 1 calc(33% - 45px);
-    padding: 5px;
+    padding: 3px;
     border-radius: 5px;
     padding-left: 15px;
     border: 5px solid rgb(201, 124, 2);
@@ -148,15 +148,19 @@ h1 {
 @media (max-width: 750px) {
 
     body {
-        font-size: 1rem;
+        font-size: 1.2rem;
+    }
+
+    .group {
+        flex: 1 1 38%;
     }
 
     .container {
-        padding: .125rem;
+        padding: .12rem;
     }
 
     .container p {
-        font-size: .95rem;
+        font-size: 1.1rem;
         margin: 0;
         margin-top: 15px;
     }
